# NutrientTracker

./: .gitignore  CMakeLists.txt  README.md
data/: README.md
docs/: USDA_DATABASE.md
scripts/: build_usda_sqlite.sql
src/: main.cpp
src/core/: CoreComponent.h  FoodMatcher.cpp  FoodMatcher.h  InputParser.cpp  InputParser.h  MealAnalyzer.cpp  MealAnalyzer.h  NutrientEngine.cpp  NutrientEngine.h  UnitConverter.cpp  UnitConverter.h
src/data/: DatabaseManager.cpp  DatabaseManager.h  USDAImporter.cpp  USDAImporter.h
src/models/: DomainTypes.h  NutrientTypes.h
src/ui/: AboutPage.cpp  AboutPage.h  MainPage.cpp  MainPage.h  MainWindow.cpp  MainWindow.h  WelcomePage.cpp  WelcomePage.h
